<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Farm App</string>
    <string name="choose_language" translatable="false">Choose Language</string>
    <string name="location">Location</string>
    <string name="today_weather">Todays Weather: </string>
    <string name="tomorrow_weather">Tomorrows Weather: </string>
    <string name="soil_info">Soil Info</string>
    <string name="enter_land_area">Enter Land Area</string>
    <string name="enter_last_crops">Enter Last 2 Crops</string>
    <string name="soil_moisture" tools:ignore="MissingTranslation">Moisture: 23%</string>
    <string name="soil_ph" tools:ignore="MissingTranslation">pH : 7.5</string>
    <string name="soil_type" tools:ignore="MissingTranslation">Sandy Soil</string>
    <string name="soil_temperature" tools:ignore="MissingTranslation">Temperature : 34</string>

    <string name="cropRecommendation" tools:ignore="MissingTranslation">Crop Recommendation</string>
    <string name="crDetail" tools:ignore="MissingTranslation">Best Crop For Your Soil</string>
    <string name="disease" tools:ignore="MissingTranslation">Disease Detection</string>
    <string name="diseasDetail" tools:ignore="MissingTranslation">Detect Disease From Your Camera</string>
    <string name="farmerCommunity" tools:ignore="MissingTranslation">Farmers Community</string>
    <string name="CommunityDetails" tools:ignore="MissingTranslation">Get Close With Your Fellow Farmer</string>
    <string name="StrtBtn" tools:ignore="MissingTranslation">Start</string>

    <string name="soil_fertility" tools:ignore="MissingTranslation">Fertility : 78</string>
    <string name="no_soil_data" tools:ignore="MissingTranslation">No soil data</string>
    <string name="soil_error" tools:ignore="MissingTranslation">Error fetching soil data</string>
    <string name="welcome_msg">Good Morning, Farmer</string>
    <string name="weather_today">Weather Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="soil_health">Soil Health</string>
    <string name="smart_tools">Smart Tools</string>
    <string name="crop_prediction">Crop Prediction</string>
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_redirect">Don\'t have an account? Register</string>
    <string name="register_title">Create Account</string>
    <string name="register_subtitle">Join the farming community</string>
    <string name="full_name_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="register_btn">Register</string>
    <string name="login_redirect">Already have an account? Login</string>
</resources>
